# bgq-driver

./: README
agents/: Makefile
agents/doc/: Makefile
agents/packaging/: Makefile  agents.specsrc
agents/src/: Makefile
agents/tests/: Makefile
bgpm/: Make.gcc.rules  Make.mpi-gcc.rules  Make.mpi-xlc.rules  Make.test.rules  Make.xlc.rules  Makefile
bgpm/docs/: DocArch.h  DocChanges.h  DocCnkInteg.h  DocCounterRules.h  DocDebug.h  DocExamples.h  DocFunctions.h  DocGlossary.h  DocHWFeatures.h  DocJob.h  DocLimitations.h  DocMainPage.h  DocNotes.h  DocOpcodes.h  DocPAPI.h  DocSpi.h  DocSwFeatures.h  DocUnits.h  Makefile  bgpm_event_tips.h  bgpm_events_doc.h
bgpm/examples/: Make.gcc.rules  Make.mpi-gcc.rules  Make.mpi-xlc.rules  Make.paths.rules  Make.test.rules  Make.xlc.rules  Makefile
bgpm/include/: Makefile  bgpm.h  err.h  funcs.h  types.h
bgpm/packaging/: bgpm.specsrc
bgpm/src/: Bgpm_EventDetails.txt  CoreReservations.cc  CoreReservations.h  Debug.cc  Debug.h  ES_CNKunit.cc  ES_CNKunit.h  ES_Factory.cc  ES_Factory.h  ES_HWPunit.cc  ES_HWPunit.h  ES_IOunit.cc  ES_IOunit.h  ES_L2unit.cc  ES_L2unit.h  ES_MXPunit.cc  ES_MXPunit.h  ES_NWunit.cc  ES_NWunit.h  ES_SWPunit.cc  ES_SWPunit.h  EnvVars.cc  EnvVars.h  ErrBkt.cc  ErrBkt.h  EvtInfo.h  EvtSet.cc  EvtSet.h  EvtSetList.cc  EvtSetList.h  EvtSetList_Inlines.h  Lock.cc  Lock.h  Makefile  PodSharePtr.h  SharePtr.h  SharedControl.cc  SharedControl.h  SharedControlIO.h  SharedControlL2.h  (+13 more)
bgpm/tests/: Args.txt  Make.test-common.rules  Make.test-common.vars  Makefile  RunTest.pl  RunTest.svchost  RunTestUtils.pm  bgutils.pm  filter-log  pmtCheck.pl  pmtData.metafile  print-bgutilvars.pl  runhw-all  runregress-mmcs.pl  sort-rank-output  test_utils.h
bgq_util/: Makefile
bgq_util/include/: ArbitraryLengthNumber.h  BGResourceContainer.h  BgEcc.h  BgEcidDecode.h  BgEndian.h  BgL2Slice.h  BgNDReduce.h  BgNDReduceConstants.h  BgNDReduce_C.h  BgParm.h  BgRandom.h  DataUtil.h  DdrAddr.h  DdrEcc.h  Elf32File.h  Elf64File.h  Elf64SymbolTableMap.h  FlightRecorder.h  InternalError.h  JtagTapDecoder.h  JtagTapState.h  Location.h  LocationUtil.h  Makefile  NameMap.h  NoPassByValue.h  PRINT_ASSERT.h  Parity.h  Ptr.h  Regexp.h  TCP6connect.h  TCP6listen.h  TCPconnect.h  TCPlisten.h  TCPstream.h  TempFile.h  Time.h  TimeBase.h  crc16n.h  crc32n.h  (+9 more)
bgq_util/packaging/: bgq_util.specsrc
bgq_util/src/: ArbitraryLengthNumber.cc  ArbitraryLengthNumberTest.h  BgEcc.cc  BgL2Slice.cc  BgNDReduce.cc  BgNDReduce_C.c  BgNDReduce_C_verify.c  BgParm.cc  DdrAddr.cc  DdrEcc.cc  Elf32File.cc  Elf64File.cc  Elf64SymbolTableMap.cc  FlightRecorder.cc  JtagTapDecoder.cc  Location.cc  Makefile  crc16n.c  crc32n.c  ml_remap.c  mt64.c  ppcDecode.cc  string_tokenizer.cc
bgws/: Make.bgws.rules  Makefile  README.txt  bgws.conf
bgws/packaging/: bgws.specsrc
bgws/queries/: SystemSummary.txt  SystemSummaryIo.txt  performanceMonitoring.txt
bgws/src/: Makefile
boot/: Makefile
cnk/: Makefile
cnk/include/: AppState.h  Config.h  Makefile  SPI_syscalls.h  Verbs.h  kcounters.h
cnk/packaging/: cnk.specsrc
cnk/src/: AppAgent0.lds  AppAgent1.lds  AppAgent2.lds  AppAgent3.lds  AppCleanup.cc  AppProcess.h  AppSetup.cc  CoreDump.cc  CoreDump.h  CoreState.h  CrcExchange.c  CrcExchange.h  JobControl.cc  JobControl.h  KThread.h  Kernel.h  Kernel_DDR.lds  Kernel_Linkage.h  Makefile  NodeController.cc  NodeController.h  NodeState.h  ProcessSetup.cc  Regs.h  ToolControl.cc  ToolControl.h  Trace.h  align.c  align.h  atomicops.h  bgcios_parse.cc  cioerror.h  core2core.c  core2core.h  ctype.c  ctype.h  debug.c  dumpthreadstate.cc  elfimage.cc  elfimage.h  (+48 more)
cnk/tools/: Makefile  bldmemfs.c  mambotrace.pl  mkstandalone.pl  objdump.pm  refactor.pl  runmambo  standaloneldrinfo.lds  standaloneldrinfo_l2.lds
comm/: .gitignore  Make.extra  Make.rules  Makefile
comm/Makefiles/: Make.BGP-CNK-OSS.rules  Make.BGP-CNK-System.rules  Make.BGQ-CNK-OSS.rules  Make.BGQ-CNK-System.rules  Make.PE-AIX-OSS.rules  Make.PE-Linux-OSS.rules
comm/lib/: Makefile
comm/packaging/: comm.specsrc
comm/sys/: Makefile
comm/sys/buildtools/: .gitignore  .mailmap  Build.rules.in  Make.rules.in  Make.rules.top.in  Makefile.in  README.build  aclocal.m4  autogen.sh  configure.in
comm/sys/buildtools/tools/: Doxyfile  doxy_clean.pl  doxygen.pl  find_deps  gen_app  gen_app_cxx  gen_shared  gen_shared_cxx  install.pl
comm/tools/: doxy_clean.pl  find_deps  select_build
coreprocessor/: Makefile
coreprocessor/packaging/: coreprocessor.specsrc
coreprocessor/src/: 3dmap.pl  Makefile  README  bagotricks.pm  bglcorereader.pm  bglmmcsreader.pm  bglsnapshot.pm  bgpcorereader.pm  bgqjtagreader.pm  checktk.pl  consolemap.pl  coreaggregator.pl  coreprocessor.pl  driver_path  memtemplate.pl  mmcs_db.pm  objdump.pm  objdump_server.pl  rrcorereader.pm  sdbgreader.pm  snapshot.pm  stacktracemap.pl  utilities.pl
db/: Make.db.rules  Makefile
db/gensrc/: Makefile  codegen  copyright.ch.txt  functiongen.awk  headergen.awk
db/include/: Makefile
db/packaging/: db.specsrc
db/schema/: Makefile  cable_spreadsheet_parser.pl  configs.tar.bz2  createBGQSchema  dbCustomize.pl  dbIsolatedIO.sql  dbNetConfig.pl  dbPopulate.pl  dbProcessRAS.pl  dbPurge.pl  dbStandardIO.sql  dbUpdate.pl  dropBGQSchema  nodeFailures.pl
db/src/: Makefile  generateSqlStrings.py
db/test/: Makefile  common.h  dblibdriver.cc  garbage.properties.template  good.properties.template  test_job.cc  (+9 more)
extlib/: Make.extlib.rules  Makefile
firmware/: Makefile  firmware.native.rules
hlcs/: Make.hlcs.rules  Makefile
hwi/: Makefile
mudm/: Doxyfile  Makefile
navigator/: Makefile  bgCopyright.js  build.profile.js  navigator.conf
ramdisk/: Makefile
ras/: Make.ras.rules  Makefile
scripts/: Make.rules.in  Makefile  Makefile.main  configure  configure.ac  rasDocGen.py  rasGen.py  rasScan.py  rasTableGen.py  snapbug.pl
spi/: Make.cnk.rules  Make.firmware.rules  Make.stubs.rules  Makefile  doxygen_external.config  doxygen_fullsource.config
teal/: Make.teal.rules  Makefile
utility/: Make.utility.rules  Makefile
xml/: Makefile
(+5592 files in other folders)
